--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,28 +1,28 @@
-# Test
-
 name: Test
 on:
   push:
     branches:
-      - main
+    - main
   pull_request:
     branches:
-      - main
+    - main
 jobs:
   build:
-    name: Build
+    name: Test
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
     steps:
-      - name: Checkout Branch
-        uses: actions/checkout@v2
-      - name: Yarn install
-        uses: borales/actions-yarn@v2.3.0
+      - uses: actions/checkout@v3
+
+      - name: Set Node.js 16.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16.x
+
+      - name: Run install
+        uses: borales/actions-yarn@v4
         with:
           cmd: install
-      - name: Yarn Test
-        uses: borales/actions-yarn@v2.3.0
+      - name: Test the app
+        uses: borales/actions-yarn@v4
         with:
           cmd: test
