--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "dotenv": "^16.3.1"
+
   },
   "engines": {
     "node": "20.x"
