--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Build
 on:
   push:
     branches:
@@ -8,7 +8,7 @@ on:
     - main
 jobs:
   build:
-    name: Test
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -22,6 +22,10 @@ jobs:
         uses: borales/actions-yarn@v4
         with:
           cmd: install
+      - name: Yarn Build
+        uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: build
       - name: Test the app
         uses: borales/actions-yarn@v4
         with:
