--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "build:server": "tsc -p tsconfig.server.json",
     "start:server": "node -r esm build/server/server.js",
     "serve": "yarn build:server && yarn start:server",
-    "predeploy:frontend": "yarn build",
-    "deploy:frontend": "aws s3 sync ./build s3://www.puns-of-anarchy.mekoppe.com --delete",
-    "postdeploy:frontend": "aws cloudfront create-invalidation --distribution-id E2GUBK4J73FC7L --paths '/*'"
+    "predeploy": "yarn build",
+    "deploy": "aws s3 sync ./build s3://www.puns-of-anarchy.mekoppe.com --delete",
+    "postdeploy": "aws cloudfront create-invalidation --distribution-id E2GUBK4J73FC7L --paths '/*'"
   },
   "eslintConfig": {
     "extends": [
