--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.197",
     "@types/node": "^16.7.13",
+    "@types/pluralize": "^0.0.30",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "antd": "^5.8.6",
@@ -18,10 +19,12 @@
     "esm": "^3.2.25",
     "global": "^4.4.0",
     "lodash": "^4.17.21",
+    "pluralize": "^8.0.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.4.2",
